--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  font-size: 1.125rem;
+  font-size: calc(0.7em + 1vw);
+
   /* font-size-adjust: var(1.125rem); */
 }
 
@@ -31,12 +32,12 @@ body {
   width: 50vw;
   height: 90vh;
   margin: 1rem auto;
-  padding-top: 2rem;
+  /* padding-top: 2rem; */
   overflow: hidden;
 }
 h1 {
   background-color: rgba(275, 275, 205, 0.9);
-  font-size: 2.7rem;
+  font-size: 0.9em;
   margin: 3rem 3rem 2rem;
   text-align: center;
   text-transform: uppercase;
@@ -47,13 +48,13 @@ h1 {
 }
 p {
   margin-left: 3rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.5em;
   background-color: rgba(275, 275, 275, 0.7);
   border-radius: 25px;
   width: fit-content;
   padding: 0.5rem 1rem;
   font-weight: bold;
-  font-size: 1.6rem;
+  font-size: 0.5em;
   transform: translateX(-150%);
   visibility: hidden;
 }
